--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,7 @@
+asgiref==3.6.0
 Django==4.2.1
-
+django-admin-sortable2==2.1.8
+django-environ==0.10.0
+django-tinymce==3.6.1
+Pillow==9.5.0
+sqlparse==0.4.4
